--- a/OutworldzFiles/Opensim/bin/Robust.HG.ini
+++ b/OutworldzFiles/Opensim/bin/Robust.HG.ini
@@ -30,11 +30,11 @@ http_listener_port=8002
 
 ;; Set by Dreamgrid
 ; The URL of the Robust server
-BaseURL=http://192.168.2.139
+BaseURL=http://192.168.2.135
 
 ; The URL of the Robust server, if PublicPort and PrivatePort must be
 ; accessed via different hostnames as in the case of a NAT gateway
-PrivURL=http://192.168.2.139
+PrivURL=http://192.168.2.135
 
 ;; Set by Dreamgrid
 ; The public port of the Robust server
@@ -54,7 +54,7 @@ ApachePort=80
 
 ;
 ;Password from DYN DNS
-MachineID=209754288
+MachineID=38971816
 
 ;
 ; * The startup section lists all the connectors to start up in this server
@@ -377,7 +377,14 @@ AssetService="OpenSim.Services.AssetService.dll:AssetService"
 ;;
 ; START  <= Leave this line
 Region_Smart=Persistent
+Region_SmartIV=Persistent
+Region_SmartVII=Persistent
+Region_SmartII=Persistent
 Region_Welcome=DefaultRegion,  DefaultHGRegion
+Region_SmartVI=Persistent
+Region_SmartI=Persistent
+Region_SmartV=Persistent
+Region_SmartIII=Persistent
 
 ; END  <= Leave this line
 ;; Allow Hyperlinks to be created at the console
@@ -895,8 +902,8 @@ SMTP_SERVER_PASSWORD=Some Password
 ;; Set by Dreamgrid
 [SmartStart]
 Enabled=True
-URL=http://192.168.2.139:8001
-MachineID=209754288
+URL=http://192.168.2.135:8001
+MachineID=38971816
 
 ;; For Joomla/jOpensim
 [CapsService]
